// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomTitle /> should render the button with all props passed 1`] = `
<h1
  class="text-blue-300 text-lg text-center"
>
  Test
</h1>
`;

exports[`<CustomTitle /> should render the button with default props 1`] = `
<h1
  class="text-blue-300 text-base text-center"
>
  Test
</h1>
`;
